# rinha-de-backend-2023-q3-rust

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  init.sql  nginx.conf
.sqlx/: query-237e3fa20568189b976e8908c4d272c2f688618842231321171f6e9b14927e79.json  query-3604ee05d66ca986c2e5c45614e745efcab2ee84d62cb1dec9bb5557f37d226f.json  query-7f72d1c00701cd08a8ac0ada6092b72cd0d768733a136e61fcd052172e4295b6.json  query-8f11e94d3f1b5852230a1bc0f4398a5d4c784fe30505c52fae024892a4813979.json
conf/nginx/: nginx.conf
rinhabackendsimulation-20230821214950170/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_consulta-5d76b.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20230821214950170/js/: all_sessions.js  assertions.json  global_stats.json  stats.js  stats.json
rinhabackendsimulation-20230822130125972/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_consulta-5d76b.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20230822130125972/js/: all_sessions.js  assertions.json  global_stats.json  stats.js  stats.json
rinhabackendsimulation-20230822163051080/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_consulta-5d76b.html  req_criac-a-o-ce502.html
rinhabackendsimulation-20230822163051080/js/: all_sessions.js  assertions.json  global_stats.json  stats.js  stats.json
rinhabackendsimulation-20230830132400748/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_criac-a-o-ce502.html
src/: lib.rs  main.rs
(+8 files in other folders)
