[package]
name = "api_rust_rinha_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["macros"] }
dotenvy = "0.15.7"
serde = "1.0.183"
serde_json = "1.0.104"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "time", "uuid"] }
tokio = { version = "1.31.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
